src/index.css
:root {
    --col-bg1: #444444;
    --col-bg2: #262626;

    --col-descbox1: rgba(40, 35, 51, 0.5);
    --col-descbox2: rgba(43, 42, 61, 0.5);

    --col-nav1: #111111;
    --col-nav2: #292929;

    --col-text-w1: #FFFFFF;
    --col-text-w2: #CCCCCC;

    --col-text-b1: #111111;
    --col-text-b2: #626262;

    --col-text-o1: #FF7A18;
    --col-text-o2: #FFA767;

    --col-shadow: rgba(0, 0, 0, .5);

    --anim-fade-in: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in;
    --anim-fade-out: 90ms cubic-bezier(0.4, 0, 1, 1) both fade-out;

}

@keyframes fade-in  { from  { opacity: 0; } }
@keyframes fade-out { to    { opacity: 0; } }

@keyframes slide-from-right { from  { transform: translateX(-60px); } }
@keyframes slide-from-left  { from  { transform: translateX( 60px); } }
@keyframes slide-to-right   { to    { transform: translateX(-60px); } }
@keyframes slide-to-left    { to    { transform: translateX( 60px); } }

html:has(.\<-)::view-transition-old(root) { animation: var(--anim-fade-out), 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left }
html:has(.\<-)::view-transition-new(root) { animation: var(--anim-fade-in), 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right }

html:has(.-\>)::view-transition-old(root) { animation: var(--anim-fade-out), 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-right }
html:has(.-\>)::view-transition-new(root) { animation: var(--anim-fade-in), 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-left }

body.animate::before {
    animation: fade-in 2s ease-out 1;
    animation-fill-mode: forwards;
}

::-webkit-scrollbar {
    width: 12px;
}

::-webkit-scrollbar-track {
    background-color: var(--col-bg2);
}

::-webkit-scrollbar-thumb {
    background-color: var(--col-bg1);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: var(--col-text-b2);
}

::-webkit-scrollbar-thumb:active {
    background-color: var(--col-bg1);
}

.unselectable {
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none;          /* Likely future */
}

html {
    height: -webkit-fill-available;
    font-family: 'Rubik', sans-serif;
    font-display: normal;
}

body {
    margin: 0;
    scroll-behavior: smooth;
    position: relative;
    z-index: 1;
    background-color: var(--col-bg2);
}

body:before,
.overlay:before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

body:before {
    background: url('https://cdn.discordapp.com/attachments/801426473059614730/1131172510294098001/bg.png') no-repeat center/cover var(--col-bg2);
}

.overlay:before {
    background: linear-gradient(to bottom, transparent 0%, black 100%) no-repeat center/cover;
}

.overlay {
    position: relative;
    z-index: 2;
    width: 100%;
    min-height: 100vh;
}


section {
    margin-top: 55px;
}

.navbar {
    position: fixed;
    top: 0;
    z-index: 1;
    width: 100%;
    max-height: 55px;
    view-transition-name: navbar;
    overflow: hidden;
}

.navbar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    background-color: var(--col-nav1);
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    height: 55px;
}

.navbar li a,
.navbar li > span,
.navbar li button {
    display: block;
    color: var(--col-text-w1);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    float: left;
    border: none;
    background-color: transparent;
    top: 0;
}

.navbar li a[aria-label] {
    float: right;
    position: relative;
}

.navbar li a .fab::before,
.navbar li a .fas:before {
    font-size: 28px;
    position: relative;
    bottom: 5.5px;
}

.navbar li:nth-of-type(1) a {
    font-weight: bold;
    font-size: 1.2rem;
    padding: 16px;
}

.navbar li > span {
    font-size: 1.2rem;
    padding: 16px 14px;
    padding-right: 24px;
}

.navbar li a {
    padding: 18px 16px;
}

.navbar li a:hover {
    background-color: var(--col-nav2);
    color: var(--col-text-o1);
    transition: background ease-in-out .2s, color ease-in-out .2s;
}

.navbar li a input {
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: -7px;
    left: -5px;
    opacity: 0;
    z-index: 10;
    cursor: pointer;
}

.navbar:not(:has(li a input:checked)) li:has(a .fab, a .fas) {
    transform: translate(310px, 0);
    transition: transform 0.5s ease-in-out;
    display: block;
}
.navbar:has(li a input:checked) li:has(a .fab, a .fas) {
    transform: translate(0, 0);
    transition: transform 0.5s ease-in-out;
    display: block;
}

@media(max-width: 700px) {
    .navbar:not(:has(li a input:checked)) li:has(a .fab, a .fas) {
        transform: translate(calc(86vw - 8px), 0);
        transition: transform 0.5s ease-in-out;
        top: 0;
    }
    .navbar:not(:has(li a input:checked)) li:has(a .fab) {
        pointer-events: none;
        user-select: none;
        position: relative;
    }
    .navbar:not(:has(li a input:checked)) li:has(a .fas) {
        position: absolute;
    }
    .navbar:not(:has(li a input:checked)) li:not(:has(a .fab, a .fas)) {
        transform: translate(0, 0);
        transition: transform 0.5s ease-in-out;
        display: block;
    }

    .navbar:has(li a input:checked) li:has(a .fas) {
        position: absolute;
    }
    .navbar:has(li a input:checked) li:not(:has(a .fab, a .fas)) {
        transform: translate(calc(-86vw + 8px), 0);
        transition: transform 0.5s ease-in-out;
        animation: setAbsolute 0s 0.25s forwards;
        display: block;
    }

    @keyframes setAbsolute { to { position: absolute;} }
}


.title {
    width: 100%;
    bottom: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

.title h1 {
    display: block;
    color: var(--col-text-w1);
    font-size: min(calc(16px + 5vw), 4rem);
    margin-bottom: 16px;
    text-shadow: 5px 0 5px var(--col-shadow);
    font-weight: bold;
}

.title h2 {
    display: block;
    color: var(--col-text-o1);
    font-size: min(calc(8px + 2vw), 1.8rem);
    margin-top: 0;
    text-shadow: 3px 0 3px var(--col-shadow);
    font-weight: bold;
}

.descbox {
    background: linear-gradient(360deg, var(--col-descbox1) 0%, var(--col-descbox2) 100%);
    font-size: 1.2rem;
    color: var(--col-text-b1);
    overflow-wrap: break-word;
    border-radius: 8px;
    margin: min(3vw, 4rem);
    margin-top: 0;
    padding: .5rem;
    position: relative;
    color: var(--col-text-w1);
    box-shadow: 5px 5px 15px 5px var(--col-shadow);
}

.descbox a {
    color: var(--col-text-o1);
}

.descbox img {
    max-width: 100%;
}

.descbox a:hover {
    color: var(--col-text-o2);
}

.descbox h1 {
    text-shadow: 3px 0 3px var(--col-shadow);
    font-weight: bold;
}

.descbox h2 {
    text-shadow: 2px 0 2px var(--col-shadow);
    font-weight: bold;
}

.descbox p {
    text-shadow: 1.5px 0 1.5px var(--col-shadow);
}

#badges > a {
    text-decoration: none;
}

.grid-container {
    display: grid;
    padding: 30px 30px;
    grid-template-columns: repeat(auto-fit, minmax(calc(250px + 1rem), 1fr));
    grid-gap: 32px;
}

.project {
    width: 100%;
    height: 100%;
    margin: 0;
}

.project {
    min-width: inherit;
    width: inherit;
    text-decoration: none;
    border-radius: 8px;
    border-color: transparent;
    border-style: solid;
    overflow: hidden;
}

.project:hover {
    border-color: var(--col-text-o1);
    transform: translateY(-4px);
    transition: border-color ease-in-out 0.2s, transform ease-in-out 0.2s;
}

.project h1 {
    color: var(--col-text-o1);
    margin-top: 4px;
    margin-bottom: 4px;
    font-size: 26px;
}

.project h1 span {
    font-size: 16px;
}

.project:hover h1 {
    color: var(--col-text-o2);
    transition: color ease-in-out 0.2s;
}

.project p {
    margin-top: 0;
    color: var(--col-text-w1);
}

.project img {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
}

.project:after {
    content: "";
    position: absolute;
    top: -140%;
    left: -230%;
    width: 225%;
    height: 200%;
    opacity: 0;
    transform: rotate(30deg);

    background: rgba(255, 255, 255, 0.13);
    background: linear-gradient(
        to right,
        rgba(255, 255, 255, 0.0) 0%,
        rgba(255, 255, 255, 0.13) 77%,
        rgba(255, 255, 255, 0.5) 92%,
        rgba(255, 255, 255, 0.0) 100%
    );
}

.project:hover:after {
    opacity: 1;
    top: 50%;
    left: 50%;
    transition-property: left, top, opacity;
    transition-duration: 1.4s, 1.4s, 0.5s;
    transition-timing-function: ease;
}

.project:active:after {
    opacity: 0;
}

#music {
    display: flex;
    width: 100%;
}

#music > div {
    width: 50%;
}
#music > div:nth-of-type(2) {
    margin-top: 25px;
}
@media(max-width: 700px) {
    #music {
        flex-direction: column-reverse;

    }
    #music > div {
        width: auto;
    }
}

.list-container {
    position: relative;
    display: flex;
    flex-direction: column;
    row-gap: 32px;
    margin: 30px;
}

.list-container > .project {
    width: auto;
}

.list-container > .project:after {
    top: -600%;
    left: -120%;
    width: 125%;
    height: 500%;
}

.list-container > .project:hover:after {
    top: 75%;
    left: 90%;
}

.list-container .descbox {
    padding: 1rem;
}

.track button {
    width: 64px;
    height: 64px;
    background-color: var(--col-text-o1);
    border-radius: 20px;
    border: none;
    font-size: 24px;
    color: var(--col-text-b1);
    padding: 0;
    margin: 0;
}
.track button:hover {
    background-color: var(--col-text-o2);
    transform: translateY(-4px);
    transition: background-color ease-in-out 0.2s, transform ease-in-out 0.2s;
    cursor: pointer;
}
.track button:not(:hover) {
    background-color: var(--col-text-o1);
    transform: translateY(4px);
    transition: background-color ease-in-out 0.2s, transform ease-in-out 0.2s;
}

.track > div {
    display: inline-block;
    width: calc(100% - 64px - 20px);
    margin: 0;
    margin-left: 10px;
}
.track label {
    pointer-events: none;
}
input[type=range] {
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    cursor: pointer;
    outline: none;
    border-radius: 15px;
    height: 6px;
    background: var(--col-text-w2);
}
input[type=range]:hover {
    height: 12px;
    transition: height .2s ease-in-out;
}
input[type=range]:not(:hover) {
    height: 6px;
    transition: height .2s ease-in-out;
}

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    height: 15px;
    width: 15px;
    background-color: transparent;
    border-radius: 50%;
    border: none;
    transition: .2s ease-in-out;
}

input[type=range]::-moz-range-thumb {
    height: 15px;
    width: 15px;
    background-color: var(--col-text-o1);
    border-radius: 50%;
    border: none;
    transition: .2s ease-in-out;
}

input[type=range]:hover::-webkit-slider-thumb {
    background-color: var(--col-text-o1);
    box-shadow: 0 0 0 3px var(--col-text-o1);
}

input[type=range]:hover::-moz-range-thumb {
    background-color: var(--col-text-o1);
    box-shadow: 0 0 0 3px var(--col-text-o1);
}

.track div span:nth-of-type(1) {
    margin: 0;
    float: left;
}
.track div span:nth-of-type(2) {
    margin: 0;
    float: right;
}

